// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu: Component should render correctly 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "color": "#FFF",
      "maxWidth": "360px",
      "minHeight": "100vh",
      "padding": "18px 20px 27px",
      "position": "fixed",
      "right": 0,
      "textAlign": "left",
      "top": 0,
      "transform": "translateX(100%)",
      "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
      "visibility": 0,
      "width": "100%",
    }
  }
>
  items
  <Component
    customStyles={
      Object {
        "position": "absolute",
        "right": 0,
        "top": "6px",
      }
    }
    onClick={[Function]}
  >
    <Component />
  </Component>
</div>
`;

exports[`Menu: Component should render opened 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "color": "#FFF",
      "maxWidth": "360px",
      "minHeight": "100vh",
      "padding": "18px 20px 27px",
      "position": "fixed",
      "right": 0,
      "textAlign": "left",
      "top": 0,
      "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
      "visibility": 1,
      "width": "100%",
    }
  }
>
  items
  <Component
    customStyles={
      Object {
        "position": "absolute",
        "right": 0,
        "top": "6px",
      }
    }
    onClick={[Function]}
  >
    <Component />
  </Component>
</div>
`;

exports[`Menu: Component should with custom styles 1`] = `
<div
  style={
    Object {
      "backgroundColor": "black",
      "color": "#FFF",
      "maxWidth": "360px",
      "minHeight": "100vh",
      "padding": "18px 20px 27px",
      "position": "fixed",
      "right": 0,
      "textAlign": "left",
      "top": 0,
      "transform": "translateX(100%)",
      "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
      "visibility": 0,
      "width": "100%",
    }
  }
>
  items
  <Component
    customStyles={
      Object {
        "backgroundColor": "black",
        "position": "absolute",
        "right": 0,
        "top": "6px",
      }
    }
    onClick={[Function]}
  >
    <Component />
  </Component>
</div>
`;
